--- a/weapp/static_v2/js/dialog/select_product_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/select_product_dialog/dialog.html
@@ -8,6 +8,13 @@
                 </div>
 
                 <div class="modal-body" style="min-height: 300px; overflow: auto;">
+
+                    <div class="mb10 clearfix xa-add-box">
+                        <div class="fr">
+                            <input class="form-control xa-query xui-search-text" value=""><span class="xa-search xui-searchBtn cursor-pointer btn w80">搜索</span>
+                        </div>
+                    </div>
+
                     <div
                             data-ui-role="advanced-table"
                             data-app="mall2"
@@ -55,7 +62,7 @@
                 <td>${product.created_at}</td>
                 <td>
                     <label class="btn  lh20  btn-primary" style="border-radius:3px;">
-                        <input type="checkbox" autocomplete="off" class="xa-selectProduct" ><span>选取</span>
+                        <input type="checkbox" autocomplete="off" class="xa-selectProduct" style="display:none;" ><span>选取</span>
                     </label>
                 </td>
             </tr>
