--- a/weapp/apps/customerized_apps/group/static/js/dialog/view_participance_data_dialog/dialog.html
+++ b/weapp/apps/customerized_apps/group/static/js/dialog/view_participance_data_dialog/dialog.html
@@ -30,7 +30,7 @@
 </script>
 
 
-<script id="app-group-viewMembers-tmpl" type="text/x-jquery-tmpl">
+<script id="app-group-viewMembers-tmpl" type="text/x-handlebar-tmpl">
 <table class="table table-bordered xb-stripedTable xa-productTable">
     <thead style="background:#c8d2e5;">
         <tr>
@@ -42,11 +42,7 @@
         </tr>
     </thead>
     <tbody>
-    {{if items.length}}
-        {{each(i, member) items}}
-            ${member}
-        {{/each}}
-    {{/if}}
+        sssss
     </tbody>
 </table>
 </script>
