--- a/weapp/apps/customerized_apps/group/static/js/dialog/view_participance_data_dialog/dialog.html
+++ b/weapp/apps/customerized_apps/group/static/js/dialog/view_participance_data_dialog/dialog.html
@@ -4,10 +4,9 @@
     <div class="modal-content">
         <div class="modal-header">
             <button aria-hidden="true" data-dismiss="modal" class="close" type="button"><span class="xui-closeColor" aria-hidden="true">&times;</span></button>
-            <h3 class="modal-title" >查看结果</h3>
+            <h3 class="modal-title" >成员详情</h3>
         </div>
         <div class="modal-body" style="min-height: 300px; overflow: auto;">
-        66666 {{ activityId }}
             <div
                     data-ui-role="advanced-table"
                     data-app="apps/group"
@@ -34,9 +33,9 @@
 <table class="table table-bordered xb-stripedTable xa-productTable">
     <thead style="background:#c8d2e5;">
         <tr>
-            <th width ="165">会员</th>
-            <th width ="105">消费金额</th>
-            <th width ="70">积分</th>
+            <th >会员</th>
+            <th >消费金额</th>
+            <th >积分</th>
             <th>来源</th>
             <th>入团时间</th>
         </tr>
@@ -48,16 +47,16 @@
                 ${item.name}
             </td>
             <td>
-                ${item.created_at}
+                ${item.money}
+            </td>
+            <td>
+                ${item.points}
+            </td>
+            <td>
+                ${item.from}
             </td>
             <td>
                 ${item.created_at}
-            </td>
-            <td>
-                 ${item.created_at}
-            </td>
-            <td>
-                 ${item.created_at}
             </td>
         </tr>
         {{/each}}
