--- a/weapp/apps/customerized_apps/group/static/js/dialog/view_participance_data_dialog/dialog.html
+++ b/weapp/apps/customerized_apps/group/static/js/dialog/view_participance_data_dialog/dialog.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="xui-i-memberInfo">
                     <div class="xui-memberNameBox">
-                        ${item.name}
+                        ${item.name|html}
                     </div>
                     <div class="xui-memberGradeBox">
                         ${item.member_grade}
