--- a/weapp/static_v2/js/dialog/select_product_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/select_product_dialog/dialog.html
@@ -43,7 +43,8 @@
         <tr>
             <th width ="240">商品信息</th>
             <th width ="105">价格</th>
-            <th width ="70">库存</th>
+            <th width ="105">库存</th>
+            <th width ="105">销量</th>
             <th>创建时间</th>
             <th>操作</th>
         </tr>
@@ -65,6 +66,7 @@
                 <td>${ product.display_price }
                 </td>
                 <td>${product.stocks}</td>
+                <td>${product.sales}</td>
                 <td>${product.created_at}</td>
                 <td>
                     <label class="btn  lh20  btn-primary" style="border-radius:3px;">
