fix bug 会员详情，刷新

--- a/weapp/apps/customerized_apps/group/static/js/dialog/view_participance_data_dialog/dialog.html
+++ b/weapp/apps/customerized_apps/group/static/js/dialog/view_participance_data_dialog/dialog.html
@@ -11,7 +11,7 @@
                     data-ui-role="advanced-table"
                     data-app="apps/group"
                     data-resource="group_participances_dialog"
-                    data-args='{"id": "{{ activityId }}"}'
+                    data-args=''
                     data-template-id="#app-group-viewMembers-tmpl"
                     data-enable-paginator="true"
                     data-enable-sort="false"
