--- a/weapp/static_v2/js/dialog/member_relations/dialog.html
+++ b/weapp/static_v2/js/dialog/member_relations/dialog.html
@@ -27,7 +27,7 @@
 		<div class="modal-header">
 			<button aria-hidden="true" data-dismiss="modal" class="close" type="button"><span aria-hidden="true">&times;</span></button>
 			<h3 class="modal-title">
-			二维码引流会员${dataValue}
+			二维码引流会员
 			</h3>
 		</div>
 		<div class="modal-body p20 pt0" 
