[优惠劵列表]调整页面接收数据结构

--- a/weapp/static_v2/js/dialog/member_detail_coupon/dialog.html
+++ b/weapp/static_v2/js/dialog/member_detail_coupon/dialog.html
@@ -83,7 +83,11 @@
 		    	{{/if}}
 		    </td>
 		    <td>
-		    	<a href="/mall2/order/?order_id=" target="_blank">${coupon_whereabouts}</a>
+		    	{{if coupon_whereabouts.type == 1}}
+		    	<a href="/mall2/order/?order_id=${coupon_whereabouts.orderid}" target="_blank">${coupon_whereabouts.content}</a>
+		    	{{else}}
+		    	${coupon_whereabouts.content}
+		    	{{/if}}
 		    </td>
 		</tr>
 		{{/each}}
