--- a/weapp/static_v2/js/dialog/member_relations/dialog.html
+++ b/weapp/static_v2/js/dialog/member_relations/dialog.html
@@ -68,17 +68,42 @@
 	</tr>
 	</thead>
 
-	<tbody>
+	<tbody><tr data-id="">
+			<td class="pl15">
+				<div style="display:table ;line-height:42px; margin-left:10px;">
+					<a target="_blank" href="/member/detail/?id=${id}" style="display: table-cell;vertical-align:top">
+						<div class="pr">
+							<div class="xui-cancelCover tc">已取消</div>
+							<img src="" onerror="this.src='/static/img/user-1.jpg'"style="width:42px;" />
+						</div>
+					</a>
+					<div style="display: table-cell;vertical-align:top;padding-left:8px; line-height:21px;text-align:left;">
+						<a target="_blank" href="/member/detail/?id=${id}" >电饭锅电饭锅电饭锅的风格的风格风格</a>
+						<div>${grade_name}</div>
+					</div>
+				</div>
+			</td>
+		    <td>${pay_times} </td>
+		    <td>${pay_money} </td>
+		    <td>${integral} </td>
+		    <td style="color:#333333;">
+	    		<span><span style="">
+				</span></span>
+		    </td>
+		    <td >${created_at} </td>
+		</tr>
  	{{if items.length}}
 		{{each(i, member) items}}
 		<tr data-id="${id}">
 			<td class="pl15">
 				<div style="display:table ;line-height:42px; margin-left:10px;">
-					<a target="_blank" href="/member/detail/?id=${id}" class="pr" style="display: table-cell;vertical-align:top">
-					{{if is_subscribed == 0}}
-					<div class="xui-cancelCover tc">已取消</div>
-					{{/if}}
-					<img src="{{if user_icon}}${user_icon}{{else}}/static/aa.jpg{{/if}}" onerror="this.src='/static/img/user-1.jpg'"style="width:42px;" />
+					<a target="_blank" href="/member/detail/?id=${id}" style="display: table-cell;vertical-align:top">
+					<div class="pr">
+						{{if is_subscribed == 0}}
+						<div class="xui-cancelCover tc">已取消</div>
+						{{/if}}
+						<img src="{{if user_icon}}${user_icon}{{else}}/static/aa.jpg{{/if}}" onerror="this.src='/static/img/user-1.jpg'"style="width:42px;" />
+					</div>
 					</a>
 					<div style="display: table-cell;vertical-align:top;padding-left:8px; line-height:21px;text-align:left;">
 						<a target="_blank" href="/member/detail/?id=${id}" >{{html username}}</a>
