--- a/weapp/static_v2/js/dialog/member_detail_coupon/dialog.html
+++ b/weapp/static_v2/js/dialog/member_detail_coupon/dialog.html
@@ -28,7 +28,7 @@
 <table style="width:100%;border:1px solid #ddd; table-layout: fixed;" class="table xb-stripedTable xb-noBorder">
 	<thead style="background:#c8d2e5;">
 	<tr class="">
-		<th width="13%">领奖时间</th>
+		<th width="13%">领取时间</th>
 		<th width="15%">优惠劵名称</th>
 		<th width="16%">明细</th>
 	    <th width="10%" class="tx_filterable" data-is-select="false">
