--- a/weapp/static_v2/js/dialog/member_relations/dialog.html
+++ b/weapp/static_v2/js/dialog/member_relations/dialog.html
@@ -50,7 +50,7 @@
 <!--推荐人数、下单人数、成交金额-->
 <div>
 	{{if data.data_value != 'purchase'}}
-		<div class="mr50 xui-fontGary fl cursor-text"><strong>推荐人数：${data.only_fans}</strong></div>
+		<div class="mr50 xui-fontGary fl cursor-text"><strong>推荐人数：${data.population}</strong></div>
 	{{/if}}
 	<div class="mr50 xui-fontGary fl cursor-text"><strong>下单人数：${data.population_order}</strong></div>
 	<div class="xui-fontGary fl cursor-text"><strong>成交金额：￥${data.amount}</strong></div>
