--- a/weapp/static_v2/js/dialog/member_relations/dialog.html
+++ b/weapp/static_v2/js/dialog/member_relations/dialog.html
@@ -68,16 +68,7 @@
 	</tr>
 	</thead>
 
-	<tbody><tr data-id="">
-		    <td>${pay_times} </td>
-		    <td>${pay_money} </td>
-		    <td>${integral} </td>
-		    <td style="color:#333333;">
-	    		<span><span style="">
-				</span></span>
-		    </td>
-		    <td >${created_at} </td>
-		</tr>
+	<tbody>
  	{{if items.length}}
 		{{each(i, member) items}}
 		<tr data-id="${id}">
