[f_mall_8896][侯庭飞]汇通快运 变为 百世快递

--- a/weapp/static_v2/js/dialog/mall_order_batch_delivery_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/mall_order_batch_delivery_dialog/dialog.html
@@ -59,7 +59,7 @@
 				<label class="xui-expresslabel"><img src="/static_v2/img/editor/express/express_yd.png"/><span class="xui-express-t">韵达快运</span></label>
 				<label class="xui-expresslabel"><img src="/static_v2/img/editor/express/express_yt.png"/><span class="xui-express-t">圆通速递</span></label>
 				<label class="xui-expresslabel"><img src="/static_v2/img/editor/express/express_st.png"/><span class="xui-express-t">申通快递</span></label>
-				<label class="xui-expresslabel"><img src="/static_v2/img/editor/express/express_bsh.png"/><span class="xui-express-t">汇通快运</span></label>
+				<label class="xui-expresslabel"><img src="/static_v2/img/editor/express/express_bsh.png"/><span class="xui-express-t">百世快递</span></label>
 				<label class="xui-expresslabel"><img src="/static_v2/img/editor/express/express_db.png"/><span class="xui-express-t">德邦物流</span></label>
 				<label class="xui-expresslabel"><img src="/static_v2/img/editor/express/express_tt.png"/><span class="xui-express-t">天天快递</span></label>
 
