--- a/weapp/apps/customerized_apps/shvote/static/js/dialog/view_participance_data_dialog/dialog.html
+++ b/weapp/apps/customerized_apps/shvote/static/js/dialog/view_participance_data_dialog/dialog.html
@@ -15,4 +15,22 @@
 	</div>
 	</div>
 </script>
+<script id="app-shvote-viewParticipanceResultDialog-dialog-tmpl" type="text/x-handlebar-tmpl">
+    <table class="table table-bordered">
+    	<thead>
+    		<tr>
+    			<td style="width:50%">投票人</td>
+    			<td>投票时间</td>
+    		</tr>
+    	</thead>
+    	<tbody>
+	        {{#each items}}
+				<tr>
+					<td>{{name}}</td>
+					<td>{{created_at}}</td>
+				</tr>
+	        {{/each}}
+        </tbody>
+    </table>
+</script>
 
