部分页面‘单品券’改为‘多商品劵’，‘全店通用劵’改为‘通用劵’

--- a/weapp/static_v2/js/dialog/member_page_select_coupon_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/member_page_select_coupon_dialog/dialog.html
@@ -53,9 +53,9 @@
                 <td class="text_nowrap" style="max-width:165px;">${coupon.name}</td>
                 <td>
                 {{if coupon.limit_product }}
-                    单品券
+                    多商品券
                 {{else}}
-                    全店通用券
+                    通用券
                 {{/if}}
                 </td>
                 <td>${coupon.money}</td>
