--- a/weapp/static_v2/js/dialog/select_coupon_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/select_coupon_dialog/dialog.html
@@ -48,9 +48,9 @@
                 <td class="text_nowrap" style="max-width:165px;">${coupon.name}</td>
                 <td>
                 {{if coupon.limit_product }}
-                    单品券
+                    多商品券
                 {{else}}
-                    全店通用券
+                    通用券
                 {{/if}}
                 </td>
                 <td>${coupon.money}</td>
