修改查看专属商品弹窗样式

--- a/weapp/static_v2/js/dialog/mall_show_promotion_products_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/mall_show_promotion_products_dialog/dialog.html
@@ -10,7 +10,7 @@
 		</div>
 		<div class="modal-body" style="min-height: 300px;">
 			<div
-				class="xa-advanced-table-products"
+				class="xa-advanced-table-products pb30"
 				data-ui-role="advanced-table"
 				data-app="mall2"
 				data-api="coupon_rule_products"
@@ -21,8 +21,6 @@
 				data-item-count-per-page="8"
 				data-auto-load="false"
 			></div>
-		</div>
-		<div class="modal-footer modal-footerBg">
 		</div>
 	</div>
 	</div>
