--- a/weapp/static_v2/js/dialog/mall_select_promotion_product_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/mall_select_promotion_product_dialog/dialog.html
@@ -266,16 +266,12 @@
 						${product.created_at}
 					</td>
 					<td>
-						{{if !product.has_forbidden_coupon}}
-							{{if !product.can_use}}
-							<label class="btn btn-primary checked" style="border-radius:3px;">
-								<input type="checkbox" autocomplete="off"><span>已使用</span>
-							</label>
-							{{else}}
-							<label class="btn btn-primary" style="border-radius:3px;">
-								<input type="checkbox" autocomplete="off" class="{{if product.can_use}}xa-selectProduct{{/if}}" ><span>选取</span>
-							</label>
-							{{/if}}
+						{{if !product.can_use}}
+							<span>已使用</span>
+						{{else}}
+						<label class="btn btn-primary" style="border-radius:3px;">
+							<input type="checkbox" autocomplete="off" class="{{if product.can_use}}xa-selectProduct{{/if}}" ><span>选取</span>
+						</label>
 						{{/if}}
 					</td>
 				</tr>
