--- a/weapp/static_v2/js/dialog/mall_select_promotion_product_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/mall_select_promotion_product_dialog/dialog.html
@@ -218,7 +218,7 @@
 		<div
 			data-ui-role="advanced-table"
 			data-app="mall2"
-			data-api="virtual_products"
+			data-api="virtual_product"
 			data-template-id="#createdVirtual-product-view"
 			data-enable-paginator="true"
 			data-enable-sort="false"
