会员列表、会员详情好友数改为推荐数；列表页推荐数为0时依然可点击，并出弹窗

--- a/weapp/static_v2/js/dialog/member_relations_info/dialog.html
+++ b/weapp/static_v2/js/dialog/member_relations_info/dialog.html
@@ -113,7 +113,7 @@
 							</tr>
 					{{/each}}
 					{{else}}
-						<tr rowspan='2' ><td colspan='5' class="h130 xui-fontGary" >暂无数据</td></tr>
+						<tr rowspan='2' ><td {{if data.only_fans==0}}colspan='6'{{else}}colspan='5'{{/if}} class="h130 xui-fontGary" >暂无数据</td></tr>
 					{{/if }}
 
 					</tbody>
