--- a/weapp/apps/customerized_apps/evaluate/static/js/dialog/view_participance_data_dialog/dialog.html
+++ b/weapp/apps/customerized_apps/evaluate/static/js/dialog/view_participance_data_dialog/dialog.html
@@ -4,12 +4,63 @@
 	<div class="modal-content">
 		<div class="modal-header">
 			<button aria-hidden="true" data-dismiss="modal" class="close" type="button"><span class="xui-closeColor" aria-hidden="true">&times;</span></button>
-			<h3 class="modal-title" >查看结果</h3>
+			<h3 class="modal-title">商品评价审核</h3>
 		</div>
-		<div class="modal-body">			
+		<div class="modal-body" style="padding:0 30px;">
+			<b>评价内容</b>
+			<div style="overflow:hidden;margin-top:10px;">
+				<div class="fl" style="width:50%;box-sizing:border-box;border-right:1px solid #e1e1e1">
+					<div>
+						<span>评价日期：</span>
+						<span>2016/03/03</span>
+					</div>
+					<div>
+						<span>晒单图片：</span>
+					</div>
+					<div>
+						<span>评价内容：</span>
+						<span class="vt" style="display:inline-block;width:330px;">
+							评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价
+						</span>
+					</div>
+				</div>
+				<div class="fl" style="width:50%;box-sizing:border-box;padding-left:10px">
+					<div>
+						<span>商品名称：</span>
+						<span>[土小宝]蒜香电动车</span>
+					</div>
+					<div>
+						<span>&nbsp;&nbsp;&nbsp;&nbsp;订单号：</span>
+						<a>20160405190356789</a>
+					</div>
+					<div>
+						<span>会员名称：</span>
+						<a>张全蛋</a>
+					</div>
+					<div>
+						<span>会员等级：</span>
+						<span>钻石会员</span>
+					</div>
+					<div>
+						<span>会员分组：</span>
+						<a>调分组</a>
+						<span>土小宝金杆粉</span>
+						<span>小二黑微家人</span>
+					</div>
+				</div>
+			</div>
+			<div style="border-bottom:2px solid #e1e1e1;padding-bottom:15px;text-align:center;margin-bottom:20px;margin-top:15px;">
+				<a href="javascript:void(0);" class="btn btn-default ml10" style="font-weight:bold;border-radius:3px;">通过审核</a>
+				<a href="javascript:void(0);" class="btn btn-default ml10" style="font-weight:bold;border-radius:3px;">通过并置顶</a>
+				<a href="javascript:void(0);" class="btn btn-default ml10" style="font-weight:bold;border-radius:3px;">屏蔽处理</a>
+			</div>
+			<b>给会员的评价</b>
+			<div style="margin-top:10px;">
+				<textarea class="xa-tails xui-textarea"></textarea>
+			</div>
 		</div>
-		<div class="modal-footer">
-			<button class="btn btn-primary xa-submit-dialog">确认</button>
+		<div class="modal-footer" style="background:#eaeef7;margin-top:10px;height:50px;line-height:50px;">
+			<button class="btn btn-primary xa-submit-dialog">提交</button>
 		</div>
 	</div>
 	</div>
