--- a/weapp/apps/customerized_apps/evaluate/static/js/dialog/search_product_dialog/dialog.html
+++ b/weapp/apps/customerized_apps/evaluate/static/js/dialog/search_product_dialog/dialog.html
@@ -15,13 +15,13 @@
                 data-template-id="#app-evaluate-searchProductDialog-tmpl"
                 data-enable-paginator="true"
                 data-enable-sort="false"
-                data-item-count-per-page="8"
+                data-item-count-per-page="6"
                 data-auto-load="false"
                 class="mt10 mb20">
             </div>
 		</div>
 		<div class="modal-footer">
-			<button class="btn btn-primary xa-submit-dialog">确认</button>
+			<button class="btn btn-primary xa-submit-dialog">完成选择</button>
 		</div>
 	</div>
 	</div>
@@ -45,7 +45,7 @@
 					<td>${item.product_name}</td>
 					<td>${item.price}</td>
 					<td>${item.evaluate_count}</td>
-					<td>选取</td>
+					<td><button class="btn xa-select" style="color:#FFF" data-id=${item.id}>选取</button></td>
 				</tr>
 	        {{/each}}
         </tbody>
