--- a/weapp/apps/customerized_apps/evaluate/static/js/dialog/view_participance_data_dialog/dialog.html
+++ b/weapp/apps/customerized_apps/evaluate/static/js/dialog/view_participance_data_dialog/dialog.html
@@ -6,28 +6,29 @@
 			<button aria-hidden="true" data-dismiss="modal" class="close" type="button"><span class="xui-closeColor" aria-hidden="true">&times;</span></button>
 			<h3 class="modal-title">商品评价审核</h3>
 		</div>
-		<div class="modal-body" style="padding:0 30px;">
+		<div class="modal-body">
 			<b>评价内容</b>
-			<div style="overflow:hidden;margin-top:10px;">
-				<div class="fl" style="width:50%;box-sizing:border-box;border-right:1px solid #e1e1e1">
+			<div class="xui-modal-content">
+				<div class="fl xui-evaluate-modalLef">
 					<div>
 						<span>评价日期：</span>
-						<span>2016/03/03</span>
+						<span>{{datetime}}</span>
 					</div>
 					<div>
 						<span>晒单图片：</span>
+
 					</div>
 					<div>
 						<span>评价内容：</span>
-						<span class="vt" style="display:inline-block;width:330px;">
-							评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价评价
+						<span class="vt xui-evaluate-comment">
+							{{content}}
 						</span>
 					</div>
 				</div>
-				<div class="fl" style="width:50%;box-sizing:border-box;padding-left:10px">
+				<div class="fl xui-evaluate-modalRig">
 					<div>
 						<span>商品名称：</span>
-						<span>[土小宝]蒜香电动车</span>
+						<span>{{product_name}}</span>
 					</div>
 					<div>
 						<span>&nbsp;&nbsp;&nbsp;&nbsp;订单号：</span>
@@ -49,17 +50,33 @@
 					</div>
 				</div>
 			</div>
-			<div style="border-bottom:2px solid #e1e1e1;padding-bottom:15px;text-align:center;margin-bottom:20px;margin-top:15px;">
-				<a href="javascript:void(0);" class="btn btn-default ml10" style="font-weight:bold;border-radius:3px;">通过审核</a>
-				<a href="javascript:void(0);" class="btn btn-default ml10" style="font-weight:bold;border-radius:3px;">通过并置顶</a>
-				<a href="javascript:void(0);" class="btn btn-default ml10" style="font-weight:bold;border-radius:3px;">屏蔽处理</a>
+			<table class="xui-evaluate-table table table-bordered">
+				<tbody>
+					<tr>
+						<td>您使用/食用产品后的感受(需要改进的地方也请留下您的意见)</td>
+						<td>东西是新鲜的，个人很喜欢.东西是新鲜的，个人很喜欢.东西是新鲜的，个人很喜欢.东西是新鲜的，个人很喜欢</td>
+					</tr>
+					<tr>
+						<td>您对本产品的包装是否满意(必填)</td>
+						<td>满意</td>
+					</tr>
+					<tr>
+						<td>最后反馈</td>
+						<td></td>
+					</tr>					
+				</tbody>
+			</table>
+			<div class="xui-evalute-btnGroups">
+				<a href="javascript:void(0);" class="btn btn-default ml20 xa-modify" name="pass" data-status="1">通过审核</a>
+				<a href="javascript:void(0);" class="btn btn-default ml20 xa-modify" name="top" data-status="2">通过并置顶</a>
+				<a href="javascript:void(0);" class="btn btn-default ml20 xa-modify" name="shield" data-status="-1">屏蔽处理</a>
 			</div>
 			<b>给会员的评价</b>
-			<div style="margin-top:10px;">
+			<div class="mt10">
 				<textarea class="xa-tails xui-textarea"></textarea>
 			</div>
 		</div>
-		<div class="modal-footer" style="background:#eaeef7;margin-top:10px;height:50px;line-height:50px;">
+		<div class="modal-footer xui-evalute-modalFooter">
 			<button class="btn btn-primary xa-submit-dialog">提交</button>
 		</div>
 	</div>
