--- a/weapp/apps/customerized_apps/evaluate/static/js/dialog/view_participance_data_dialog/dialog.html
+++ b/weapp/apps/customerized_apps/evaluate/static/js/dialog/view_participance_data_dialog/dialog.html
@@ -40,9 +40,11 @@
 			</div>
 			<div>
 				<span>晒单图片：</span>
+				<ul>
 				{{#each img}}
-				 	<img src="{{this}}">
+				 	<li><img src="{{this}}" width="50px" height="50px"></li>
 				{{/each}}
+				</ul>
 			</div>
 			<div>
 				<span>评价内容：</span>
@@ -75,7 +77,7 @@
 				<span>小二黑微家人</span>
 			</div>
 		</div>
-<!-- 		<table class="xui-evaluate-table table table-bordered">
+		<table class="xui-evaluate-table table table-bordered">
 			<tbody>
 				<tr>
 					<td>您使用/食用产品后的感受(需要改进的地方也请留下您的意见)</td>
@@ -90,5 +92,5 @@
 					<td></td>
 				</tr>					
 			</tbody>
-		</table> -->
+		</table>
 </script>
