--- a/weapp/apps/customerized_apps/evaluate/static/js/dialog/view_participance_data_dialog/dialog.html
+++ b/weapp/apps/customerized_apps/evaluate/static/js/dialog/view_participance_data_dialog/dialog.html
@@ -77,6 +77,7 @@
 				<span>小二黑微家人</span>
 			</div>
 		</div>
+		{{#if isActive}}
 		<table class="xui-evaluate-table table table-bordered">
 			<tbody>
 				<tr>
@@ -93,4 +94,5 @@
 				</tr>					
 			</tbody>
 		</table>
+		{{/if}}	
 </script>
