解决翻页选择问题

--- a/weapp/apps/customerized_apps/evaluate/static/js/dialog/search_product_dialog/dialog.html
+++ b/weapp/apps/customerized_apps/evaluate/static/js/dialog/search_product_dialog/dialog.html
@@ -1,5 +1,5 @@
 <script id="app-evaluate-searchProductDialog-dialog-tmpl" type="text/x-handlebar-tmpl">
-	<div class="xui-app_shvote-Dialog modal fade">
+	<div class="xui-app_shvote-Dialog modal fade xa-relations-Dialog">
 	<div class="modal-dialog modal-lg">
 	<div class="modal-content">
 		<div class="modal-header">
