--- a/weapp/apps/customerized_apps/evaluate/static/js/dialog/view_participance_data_dialog/dialog.html
+++ b/weapp/apps/customerized_apps/evaluate/static/js/dialog/view_participance_data_dialog/dialog.html
@@ -1,5 +1,5 @@
 <script id="app-evaluate-viewParticipanceDataDialog-dialog-tmpl" type="text/x-handlebar-tmpl">
-	<div class="xui-app_evaluate-Dialog modal fade">
+	<div class="xui-app_evaluate-Dialog modal fade xa-app_evaluate-Dialog">
 	<div class="modal-dialog modal-lg">
 	<div class="modal-content">
 		<div class="modal-header">
@@ -8,7 +8,7 @@
 		</div>
 		<div class="modal-body">
 			<b>评价内容</b>
-			<div class="xui-modal-content">
+			<div class="xui-modal-content xa-modal-content">
 			</div>
 			<div class="xui-evalute-btnGroups">
 				<a href="javascript:void(0);" class="btn btn-default ml20 xa-modal-modify" name="pass" data-status="1">通过审核</a>
